Resolve warnings/accept suggestions throughout `AttachmentControllerV4Test`